add activity router.

--- a/app/src/main/assets/www/test_js_native.html
+++ b/app/src/main/assets/www/test_js_native.html
@@ -26,6 +26,60 @@
 <a href="broker2://login/185116110851?passwd=aabbcc">login/185116110851?passwd=aabbcc</a><br>
 <a href="broker2://login?passwd=aabbcc">login?passwd=aabbcc</a><br>
 
+<hr>
+<a href="broker2://www.jzsec.com/trade?actiontype=112&loginmobile=13300000010&token=aaa">broker2://www.jzsec.com/trade?actiontype=pfs&loginmobile=13300000010&token=aaa</a><br><br>
+<a href="http://www.jzsec.com/trade?actiontype=113&loginmobile=13300000011&token=aaa1">http://www.jzsec.com/trade?actiontype=113&loginmobile=13300000011&token=aaa1</a><br><br>
+<a href="broker2://trade?actiontype=114&loginmobile=13300000012&token=aaa2">broker2://trade?actiontype=114&loginmobile=13300000012&token=aaa2</a><br><br>
+<hr>
+
+<h2>capp</h2>
+<a href="imaster://?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032">
+    神州长城imaster://?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032</a>
+<hr>
+
+<a href="imaster://www.imaster555.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=600000&bs_quantity=300&bs_price=28.61032&page_index=1">
+    浦发银行"imaster://www.imaster555.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=600000&bs_quantity=300&bs_price=28.61032&page_index=1"
+</a>
+<hr>
+
+<a href="http://www.imaster.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1">
+    "http://www.imaster.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1"
+</a>
+
+
+<br>
+<hr>
+<br>
+<a href="imaster2://www.imaster.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1">
+    "imaster2://www.imaster.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1"
+</a>
+<br>
+<hr>
+<br>
+<a href="imaster2://trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1">
+    "imaster2://trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1"
+</a>
+
+<h2>broker-capp</h2>
+<a href="http://www.jzsec.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1">
+    "http://www.jzsec.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1"
+</a>
+<hr>
+<br>
+<a href="broker2://www.jzsec.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1">
+    "broker2://www.jzsec.com/trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1"
+</a>
+<hr>
+<br>
+<a href="broker2://trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1">
+    "broker2://trade2?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1"
+</a>
+<hr><hr>
+
+<h2>imaster3</h2>
+<a href="imaster3://trade?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1">
+    "imaster3://trade?actiontype=pfs&loginmobile=13300000010&token=aaaabbbbccccddddaaaabbbbccccdddd&actid=A020001&bs_flag=0&stock_code=000018&bs_quantity=300&bs_price=28.61032&page_index=1"
+</a>
 
 </body>
 </html>
